fix(activites): précisiions numpy

--- a/06-memos/glossaire.html
+++ b/06-memos/glossaire.html
@@ -78,19 +78,19 @@
 <td>append</td>
 <td>…</td>
 <td>Ajoute une valeur à une liste</td>
-<td><a href="https://pyspc.readthedocs.io/fr/latest/05-bases/08-listes.html">Les listes</a></td>
+<td><a href="https://pyspc.readthedocs.io/fr/latest/05-bases/07-listes.html">Les listes</a></td>
 </tr>
 <tr class="even">
 <td>arange</td>
 <td>numpy</td>
 <td>Crée un tableau</td>
-<td><a href="https://pyspc.readthedocs.io/fr/latest/05-bases/08-listes.html">Les listes</a></td>
+<td><a href="https://pyspc.readthedocs.io/fr/latest/05-bases/07-listes.html">Les listes</a></td>
 </tr>
 <tr class="odd">
 <td>array</td>
 <td>numpy</td>
 <td>Crée un tableau</td>
-<td><a href="https://pyspc.readthedocs.io/fr/latest/05-bases/08-listes.html">Les listes</a></td>
+<td><a href="https://pyspc.readthedocs.io/fr/latest/05-bases/07-listes.html">Les listes</a></td>
 </tr>
 <tr class="even">
 <td>arrow</td>
@@ -114,7 +114,7 @@
 <td>choice</td>
 <td>random</td>
 <td>Renvoie au hasard un élément d’une liste</td>
-<td><a href="https://pyspc.readthedocs.io/fr/latest/05-bases/08-listes.html">Les listes</a></td>
+<td><a href="https://pyspc.readthedocs.io/fr/latest/05-bases/07-listes.html">Les listes</a></td>
 </tr>
 <tr class="even">
 <td>continue</td>
@@ -210,7 +210,7 @@
 <td>insert</td>
 <td>…</td>
 <td>Insère un élément dans une liste</td>
-<td><a href="https://pyspc.readthedocs.io/fr/latest/05-bases/08-listes.html">Les listes</a></td>
+<td><a href="https://pyspc.readthedocs.io/fr/latest/05-bases/07-listes.html">Les listes</a></td>
 </tr>
 <tr class="even">
 <td>int</td>
@@ -222,7 +222,7 @@
 <td>join</td>
 <td>…</td>
 <td>Concatène les éléments d’une liste séparés par un séparateur</td>
-<td><a href="https://pyspc.readthedocs.io/fr/latest/05-bases/08-listes.html">Les listes</a></td>
+<td><a href="https://pyspc.readthedocs.io/fr/latest/05-bases/07-listes.html">Les listes</a></td>
 </tr>
 <tr class="even">
 <td>legend</td>
@@ -234,62 +234,82 @@
 <td>len</td>
 <td>…</td>
 <td>Renvoie la taille d’une liste</td>
-<td><a href="https://pyspc.readthedocs.io/fr/latest/05-bases/08-listes.html">Les listes</a></td>
+<td><a href="https://pyspc.readthedocs.io/fr/latest/05-bases/07-listes.html">Les listes</a></td>
 </tr>
+
+
+
+
 <tr class="even">
-<td>linspace</td>
-<td>numpy</td>
-<td>Crée un tableau</td>
-<td><a href="https://pyspc.readthedocs.io/fr/latest/05-bases/08-listes.html">Les listes</a></td>
-</tr>
-<tr class="odd">
 <td>list</td>
 <td>…</td>
 <td>Convertit une chaîne de caractères en liste de caractères</td>
-<td><a href="https://pyspc.readthedocs.io/fr/latest/05-bases/08-listes.html">Les listes</a></td>
+<td><a href="https://pyspc.readthedocs.io/fr/latest/05-bases/07-listes.html">Les listes</a></td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td>min</td>
 <td>…</td>
 <td>Renvoie le plus petit élément d’une liste</td>
-<td><a href="https://pyspc.readthedocs.io/fr/latest/05-bases/08-listes.html">Les listes</a></td>
+<td><a href="https://pyspc.readthedocs.io/fr/latest/05-bases/07-listes.html">Les listes</a></td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td>max</td>
 <td>…</td>
 <td>Renvoie le plus grand élément d’une liste</td>
-<td><a href="https://pyspc.readthedocs.io/fr/latest/05-bases/08-listes.html">Les listes</a></td>
+<td><a href="https://pyspc.readthedocs.io/fr/latest/05-bases/07-listes.html">Les listes</a></td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td>MultipleLocator</td>
 <td>matplotlib.ticker</td>
 <td>Gradue les axes</td>
 <td><a href="https://pyspc.readthedocs.io/fr/latest/05-bases/10-graphiques_partie_1.html">Comment créer un graphique-1?</a></td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td>not in</td>
 <td>…</td>
 <td>Vérifie qu’une valeur ne soit pas présente</td>
 <td><a href="https://pyspc.readthedocs.io/fr/latest/05-bases/05-tests.html">Les tests</a></td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td>open</td>
 <td>…</td>
 <td>Ouvre un fichier</td>
 <td><a href="https://pyspc.readthedocs.io/fr/latest/05-bases/09-fichiers-csv.html">Comment importer des données numériques ?</a></td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td>or</td>
 <td>…</td>
 <td>Opérateur logique OU</td>
 <td><a href="https://pyspc.readthedocs.io/fr/latest/05-bases/04-operations_basiques.html">Opérations basiques</a></td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td>plot</td>
 <td>matplotlib.pyplot</td>
 <td>Crée un graphique</td>
 <td><a href="https://pyspc.readthedocs.io/fr/latest/05-bases/10-graphiques_partie_1.html">Comment créer un graphique-1?</a></td>
 </tr>
+<tr class="even">
+<td>np.linspace</td>
+<td>numpy</td>
+<td>Crée un tableau</td>
+<td><a href="https://pyspc.readthedocs.io/fr/latest/05-bases/08-tableaux_numpy.html">Tableaux numpy</a></td>
+</tr>
+<tr class="odd">
+<td>np.arange</td>
+<td>numpy</td>
+<td>Crée un tableau de valeurs séquentielles</td>
+<td><a href="https://pyspc.readthedocs.io/fr/latest/05-bases/08-tableaux_numpy.html">Tableaux numpy</a></td>
+</tr>
+
+<tr class="even">
+<td>np.array</td>
+<td>numpy</td>
+<td>Transforme une liste en tableau numpy</td>
+<td><a href="https://pyspc.readthedocs.io/fr/latest/05-bases/08-tableaux_numpy.html">Tableaux numpy</a></td>
+</tr>
+
+
+
 <tr class="odd">
 <td>polyfit</td>
 <td>numpy</td>
@@ -300,7 +320,7 @@
 <td>pop</td>
 <td>…</td>
 <td>Supprime un élément d’une liste</td>
-<td><a href="https://pyspc.readthedocs.io/fr/latest/05-bases/08-listes.html">Les listes</a></td>
+<td><a href="https://pyspc.readthedocs.io/fr/latest/05-bases/07-listes.html">Les listes</a></td>
 </tr>
 <tr class="odd">
 <td>print</td>
@@ -324,7 +344,7 @@
 <td>remove</td>
 <td>…</td>
 <td>Supprime un élément d’une liste</td>
-<td><a href="https://pyspc.readthedocs.io/fr/latest/05-bases/08-listes.html">Les listes</a></td>
+<td><a href="https://pyspc.readthedocs.io/fr/latest/05-bases/07-listes.html">Les listes</a></td>
 </tr>
 <tr class="odd">
 <td>return</td>
@@ -342,7 +362,7 @@
 <td>sample</td>
 <td>random</td>
 <td>Renvoie au hasard un ou plusieurs éléments d’une liste</td>
-<td><a href="https://pyspc.readthedocs.io/fr/latest/05-bases/08-listes.html">Les listes</a></td>
+<td><a href="https://pyspc.readthedocs.io/fr/latest/05-bases/07-listes.html">Les listes</a></td>
 </tr>
 <tr class="even">
 <td>sep</td>
@@ -360,13 +380,13 @@
 <td>sort</td>
 <td>…</td>
 <td>Trie une liste</td>
-<td><a href="https://pyspc.readthedocs.io/fr/latest/05-bases/08-listes.html">Les listes</a></td>
+<td><a href="https://pyspc.readthedocs.io/fr/latest/05-bases/07-listes.html">Les listes</a></td>
 </tr>
 <tr class="odd">
 <td>sorted</td>
 <td>…</td>
 <td>Trie une liste</td>
-<td><a href="https://pyspc.readthedocs.io/fr/latest/05-bases/08-listes.html">Les listes</a></td>
+<td><a href="https://pyspc.readthedocs.io/fr/latest/05-bases/07-listes.html">Les listes</a></td>
 </tr>
 <tr class="even">
 <td>sqrt</td>
